--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.6",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
     "react": "^19",
     "react-dom": "^19",
