--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ckeditor/ckeditor5-react": "^9.5.0",
     "@tinymce/tinymce-react": "^6.2.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.6",
     "jwt-decode": "^4.0.0",
