--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^41.4.2",
     "@ckeditor/ckeditor5-react": "^9.5.0",
+    "@headlessui/react": "^2.2.4",
     "@tinymce/tinymce-react": "^6.2.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.9.0",
